--- a/main.css
+++ b/main.css
@@ -482,7 +482,19 @@ body {
 
 /************** For Context menu ***********/
 
+
 /* context menu */
+
+.over {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  visibility: hidden;
+}
+
+
 .context-menu {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: none;
@@ -571,6 +583,12 @@ body {
   justify-content: center;
   text-decoration: none;
 }
+.context-menu__link_button:hover {
+  /* background: linear-gradient(0deg, rgba(255,255,255,0.25), rgba(255,255,255,0.25)); */
+}
+input[type="submit"]:hover{
+  background: linear-gradient(0deg, rgba(255,255,255,0.25), rgba(255,255,255,0.25));
+}
 .context-menu__items ul {
   position: absolute;
   white-space: nowrap;
@@ -602,6 +620,166 @@ body {
 }
 /************** For Context menu ***********/
 
+
+
+
+/************** For Modal ***********/
+.wrapper {
+  text-align: center;
+}
+.wrapper h1 {
+  text-transform: uppercase;
+  font-family: 'Baloo Bhaina', cursive;
+  font-size: 45px;
+  margin-bottom: 10px;
+}
+.wrapper p {
+  margin-top: 0;
+  margin-bottom: 40px;
+}
+
+/* Modal button */
+.modal-btn {
+  font-family: 'Baloo Bhaina', cursive;
+  letter-spacing: 1px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 10px 25px;
+  background-color: #ef6633;
+  color: #fff;
+  transition: all .3s;
+}
+.modal-btn:hover {
+  background-color: #d25729;
+}
+
+/* Modal */
+.modal {
+  background-color: rgba(0,0,0,.65);
+  display: none;
+  overflow: auto;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  animation: fadeIn 1s ease;
+}
+
+/* Modal Content */
+.modal-content {
+  /* border-radius: 10px; */
+  position: relative;
+  top: 0px;
+  width: 600px;
+  margin: 0 auto;
+  background-color: #fafafa;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation: totop-in .2s ease;
+}
+.modal-animated-in {
+  animation: totop-in .3s ease;
+}
+.modal-animated-out {
+  animation: totop-out .3s ease forwards;
+}
+.modal-header {
+  background-color: white;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  padding-left: 20px;
+  box-sizing: border-box;
+}
+.modal-header h3{
+  color: black;
+}
+.modal-content .close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: white;
+  width: 60px;
+  height: 60px;
+  color: red;
+  line-height: 60px;
+  text-align: center;
+  cursor: pointer;
+  transition: all .3s;
+}
+.modal-content .close:hover {
+  background-color: red;
+  color: white;
+}
+
+/* Modal Body */
+.modal-body {
+  padding: 0 20px;
+}
+.modal-body ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.modal-body ul li {
+  position: relative;
+  display: block;
+  margin-left: 20px;
+  color: #555;
+}
+.modal-body ul li::before {
+  position: absolute;
+  content: '\f00c';
+  color: #5cc560;
+  left: -20px;
+  top: 10px;
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Modal Footer */
+.modal-footer {
+  background-color: #fafafa;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  padding-left: 20px;
+  box-sizing: border-box;
+
+}
+.modal-header h3,
+.modal-footer h3 {
+  color: #fff;
+}
+
+/* Keyframes */
+@keyframes totop-in {
+  0% {
+    top: 600px;
+    opacity: 0;
+  }
+  100% {
+    top: 0;
+    opacity: 1;
+  }  
+}
+
+@keyframes totop-out {
+  0% {
+    top: 0px;
+    opacity: 1;
+  }
+  100% {
+    top: -100%;
+    opacity: 0;
+  }  
+}
+/************** For Modal ***********/
 
   
   
