--- a/public/html/register_student.css
+++ b/public/html/register_student.css
@@ -116,3 +116,60 @@
 	right:50%;
 	margin-right:20px;
 }
+.stepper-button{
+	border:none;
+	outline: none;
+	background-color: orange;
+	color: white;
+	font-size: large;
+	padding: 10px 20px 10px 20px;
+	height: 40px;
+	width:auto;
+	border-radius: 20px;
+	pointer-events: auto;
+    cursor: pointer;
+}
+.stepper-button:hover{
+	/* background: linear-gradient(0deg, rgba(255,255,255,0.25), rgba(255,255,255,0.25)); */
+}
+.input-container{
+    display:flex;
+    flex-direction:row;
+    border: 1px solid #707070;
+    margin: 10px 20px 5px 20px;
+    padding: 10px 20px 10px 20px;
+	/* width:auto; */
+    font-style: normal;
+}
+.whole-input-container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+input, select{
+    flex-grow:2;
+    outline:none;
+    border:none;
+    font-family: 'Segoe UI', FontAwesome, sans-serif;
+    background-color: transparent;
+}
+#myBtn {
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 30px;
+	z-index: 99;
+	font-size: 18px;
+	border: none;
+	outline: none;
+	background-color: orange;
+	color: white;
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 4px;
+}
+  
+  #myBtn:hover {
+	background-color: #555;
+}
